crates/carta/tests/snapshots/golden_writer__native__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "" , [ "uri" ] , [] )
        [ Str "http://example.com" ]
        ( "http://example.com" , "" )
    ]
]
