crates/carta/tests/snapshots/golden_writer__native__common__link-in-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "" , [] , [] )
        [ Str "outer "
        , Link
            ( "iid" , [ "ic" ] , [] ) [ Str "inner" ] ( "u2" , "" )
        , Str " end"
        ]
        ( "u1" , "" )
    ]
]
