crates/carta/tests/snapshots/golden_writer__native__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "Padding"
    , Space
    , Str "padding"
    , Space
    , Str "padding"
    , Space
    , Str "padding"
    , Space
    , Link
        ( "" , [] , [] )
        [ Str "a"
        , Space
        , Str "multi"
        , Space
        , Str "word"
        , Space
        , Str "link"
        , Space
        , Str "label"
        , Space
        , Str "here"
        ]
        ( "http://example.com/path" , "" )
    , Space
    , Str "and"
    , Space
    , Str "trailing"
    , Space
    , Str "words"
    , Space
    , Str "to"
    , Space
    , Str "push"
    , Space
    , Str "wrapping."
    ]
]
