crates/carta/tests/snapshots/golden_writer__native__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "" , [] , [] )
        [ Str "x" ]
        ( "http://example.com/a%20b#frag" , "" )
    ]
]
