crates/carta/tests/snapshots/golden_writer__native__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "term" ]
      , [ [ BulletList
              [ [ Plain [ Str "alpha" ] ] , [ Plain [ Str "beta" ] ] ]
          ]
        ]
      )
    ]
]
