crates/carta/tests/snapshots/golden_writer__native__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , Period )
    [ [ Plain [ Str "first" ] ]
    , [ Plain [ Str "second" ]
      , BulletList
          [ [ Plain [ Str "suba" ] ] , [ Plain [ Str "subb" ] ] ]
      ]
    , [ Plain [ Str "third" ] ]
    ]
]
