crates/carta/tests/snapshots/golden_writer__native__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ BulletList
    [ [ BulletList
          [ [ Plain [ Str "inner" , Space , Str "one" ] ]
          , [ Plain [ Str "inner" , Space , Str "two" ] ]
          ]
      ]
    , [ Plain [ Str "outer" , Space , Str "two" ] ]
    ]
]
